<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/textViewDescr"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioGroup
            android:id="@+id/activityType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/marcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Marcher" />

            <RadioButton
                android:id="@+id/courir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Courir" />

            <RadioButton
                android:id="@+id/immobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Immobile" />

            <RadioButton
                android:id="@+id/monterMarches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Monter" />

            <RadioButton
                android:id="@+id/descendreMarches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descendre" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Sélectionner l'utilisateur :"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioGroup
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioKevin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:tag="1"
                android:text="Kévin" />

            <RadioButton
                android:id="@+id/radioAxel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="2"
                android:text="Axel" />

            <RadioButton
                android:id="@+id/radioLavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="3"
                android:text="Lavannya" />

            <RadioButton
                android:id="@+id/radioAgigi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="4"
                android:text="Agilan " />

            <RadioButton
                android:id="@+id/radioAlex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="5"
                android:text="Alex" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonStartSensors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onStartClick"
            android:text="@string/startDataCollectionButton" />
        <Button
            android:id="@+id/buttonReturn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onStop"
            android:text="@string/returnButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>